--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>aj amar mon valo ney</h1>
     <h2>mama i can code naw</h2>
     <h3>new code change</h3>
+    <p>more paragraph</p>
+
 </body>
 </html>
