--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>mama i can code naw</h2>
     <h3>new code change</h3>
     <p>more paragraph</p>
+    <img src="istock.jpg.jpg" alt="">
 
 </body>
 </html>
