--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>aj amar mon valo ney</h1>
+    <h1>aj amar mon valo ney AMI JANI NA AMAR KI KORA UCIT</h1>
     <h2>mama i can code naw</h2>
     <h3>new code change</h3>
     <p>more paragraph</p>
